--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // navigation
     def nav_version = "2.4.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -55,7 +56,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.40"
 
     // liveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha05"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha06"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
