--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,16 @@
     package="com.example.sopt_seminar">
 
     <application
+        android:name=".MainApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_foreground"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SoptSeminar"
-        android:name=".MainApp"
-        >
+        android:theme="@style/Theme.SoptSeminar">
+        <activity
+            android:name=".ui.TestActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
