--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
 }
 
 dependencies {
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // navigation
     def nav_version = "2.4.2"
