--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,8 @@ android {
 }
 
 dependencies {
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.13.0'
-    kapt 'com.github.bumptech.glide:compiler:4.13.0'
+    // Coil
+    implementation "io.coil-kt:coil:2.0.0-rc03"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // navigation
