--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
 }
 
 dependencies {
+    // repeatLifeCycle
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
+
     // Coil
     implementation "io.coil-kt:coil:2.0.0-rc03"
 
