[FEAT] 회원가입 로그인 서버 연결
data.api 패키지에 요청 응답 값을 받을 data class 생성
DataResponse sealed class 만들어서 common response 제네릭으로 넣어줌
성공했을 때, 실패했을 때 토스트에 보여줄 메시지를 만들어서 Result 안에 넣어줌
ViewModel에서 우선 유효성 검사를 한 후, 서버와 통신을 하고 결과에 맞는 메시지를 토스트로 보여줌

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sopt_seminar">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MainApp"
         android:allowBackup="true"
@@ -9,10 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SoptSeminar">
-        <activity
-            android:name=".ui.TestActivity"
-            android:exported="false" />
+        android:theme="@style/Theme.SoptSeminar"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true">
