--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,15 @@ android {
 }
 
 dependencies {
+    // Retrofit2
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+
+    // Retrofit2 converter
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    // gson
+    implementation "com.google.code.gson:gson:2.9.0"
+
     // repeatLifeCycle
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
 
