--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
     buildFeatures {
         dataBinding true
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -48,10 +51,10 @@ dependencies {
     implementation "com.google.code.gson:gson:2.9.0"
 
     // repeatLifeCycle
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01'
 
     // Coil
-    implementation "io.coil-kt:coil:2.0.0-rc03"
+    implementation "io.coil-kt:coil:2.1.0"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // navigation
@@ -71,12 +74,17 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.40"
 
     // liveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha06"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-rc01"
+
+    // Optional -- Robolectric environment
+    testImplementation 'androidx.test:core:1.4.0'
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:4.2.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
