--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
     }
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
     testOptions {
         unitTests.returnDefaultValues = true
@@ -41,6 +42,9 @@ android {
 }
 
 dependencies {
+    // Splash Screen
+    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
+
     // Retrofit2
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
